[gd_scene load_steps=16 format=3 uid="uid://hti2ovtgnpty"]

[ext_resource type="Script" path="res://main.gd" id="1_aaj2i"]
[ext_resource type="Texture2D" uid="uid://cyaxcn3kdxa76" path="res://art/card2.png" id="2_ljhvj"]
[ext_resource type="FontFile" uid="uid://c7k6x37dblel2" path="res://art/RomeoDN.ttf" id="3_rav3y"]
[ext_resource type="Texture2D" uid="uid://ch7nw54rws7ad" path="res://art/button.png" id="4_qqx0v"]
[ext_resource type="Script" path="res://state_machine.gd" id="5_80fuu"]
[ext_resource type="Script" path="res://start.gd" id="6_h6ovi"]
[ext_resource type="Script" path="res://game.gd" id="7_g4v6b"]
[ext_resource type="Texture2D" uid="uid://c52m0v8awnixe" path="res://art/stop.png" id="8_1ko8a"]
[ext_resource type="Texture2D" uid="uid://cr5gq65bof75p" path="res://art/go_button.png" id="8_75ub4"]
[ext_resource type="Texture2D" uid="uid://b1p3w1cjupxgr" path="res://art/go_button_pressed.png" id="9_ap66g"]
[ext_resource type="Texture2D" uid="uid://bu7bqxhl43ytn" path="res://art/deer.png" id="9_oyq78"]
[ext_resource type="Texture2D" uid="uid://cd51r1dcwo2d1" path="res://art/Car.png" id="10_n4pdq"]
[ext_resource type="Script" path="res://transition.gd" id="13_1h4ij"]

[sub_resource type="LabelSettings" id="LabelSettings_lpyrt"]
font = ExtResource("3_rav3y")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vkdp1"]
font = ExtResource("3_rav3y")
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="Calendar" type="Node2D"]
script = ExtResource("1_aaj2i")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 652.0
size_flags_vertical = 4

[node name="Card" type="TextureButton" parent="Background"]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -506.0
offset_right = 172.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ljhvj")
texture_pressed = ExtResource("2_ljhvj")
texture_hover = ExtResource("2_ljhvj")

[node name="GoButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 169.5
offset_right = 128.0
offset_bottom = 269.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_75ub4")
texture_pressed = ExtResource("9_ap66g")
texture_hover = ExtResource("8_75ub4")
metadata/_edit_group_ = true

[node name="Deer" type="TextureRect" parent="Background"]
visible = false
texture_filter = 3
layout_mode = 0
offset_left = 503.0
offset_top = 286.0
offset_right = 621.0
offset_bottom = 403.0
texture = ExtResource("9_oyq78")

[node name="Car" type="TextureRect" parent="Background"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 485.0
offset_top = 325.0
offset_right = 647.0
offset_bottom = 406.0
texture = ExtResource("10_n4pdq")

[node name="Result" type="Label" parent="Background"]
layout_mode = 0
offset_left = 435.0
offset_top = 187.0
offset_right = 710.0
offset_bottom = 256.0
text = "Testing"
label_settings = SubResource("LabelSettings_lpyrt")
horizontal_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 150.0
offset_right = 127.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_qqx0v")
texture_pressed = ExtResource("4_qqx0v")
texture_hover = ExtResource("4_qqx0v")
metadata/_edit_group_ = true

[node name="Start" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = 63.0
offset_right = 119.5
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_vkdp1")
horizontal_alignment = 1

[node name="Stop" type="TextureRect" parent="Background"]
visible = false
layout_mode = 0
offset_left = 511.0
offset_top = 288.0
offset_right = 648.0
offset_bottom = 420.0
texture = ExtResource("8_1ko8a")

[node name="DelayTime" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="ReactTime" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.95
one_shot = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("5_80fuu")

[node name="Start" type="Node2D" parent="StateMachine"]
script = ExtResource("6_h6ovi")

[node name="Game" type="Node2D" parent="StateMachine"]
script = ExtResource("7_g4v6b")

[node name="Transition" type="Node2D" parent="StateMachine"]
script = ExtResource("13_1h4ij")

[node name="DisplayFact" type="Node2D" parent="StateMachine"]

[node name="ResetNext" type="Node2D" parent="StateMachine"]

[connection signal="pressed" from="Background/Card" to="." method="_on_card_pressed"]
[connection signal="pressed" from="Background/GoButton" to="." method="_on_go_button_pressed"]
[connection signal="pressed" from="Background/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="DelayTime" to="." method="_on_delay_time_timeout"]
[connection signal="timeout" from="ReactTime" to="." method="_on_react_time_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
